# ambit

./: .gitattributes  .gitignore  99-usb-palette.rules  MANIFEST.in  Makefile  README.md  ROADMAP.md  ambit.service  mise.toml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yml
ambit/: __init__.py  component.py  configuration.py  controller.py  coordinates.py  fake.py  flags.py  image.py  message.py  render.py  resources.py  simulator.py
docs/: API.md  BEHAVIOR.md  CONCEPTS.md  CONFIG.md  EXTENSIONS.md  HACKING.md  IMAGE.md  INPUT.md  INTEGRATION.md  LAYOUT.md  PERFORMANCE.md  PROTOCOL.md  QUERY.md  THREADING.md  TOPOLOGY.md
docs/captures/: app-dial-right-left.pcapng  app-slider-up-down.pcapng  empty-startup-allinputs-allactions-shutdown.pcapng  joy-dial-right-left.pcapng  joy-slider-up-down.pcapng  joy-startup.pcapng  keys-shutdown.pcapng  meta-button-press-release.pcapng  meta-dial-right-left.pcapng  meta-startup.pcapng  midi-startup.pcapng  test-button-press-release.pcapng  test-connect-via-slider-clockwise.pcapng
example/configs/: hidmap.plp
example/layouts/: template.plp
example/scripts/: hello.sh  temperature.sh  unlock.sh
reference/assets/: 0.raw  11.raw  14.raw  15.raw  16.raw  17.raw  18.raw  2.raw  20.raw  21.raw  22.raw  6.raw  9.raw
reference/captures/: app-button-press-release.pcapng  app-dial-press-release.pcapng  app-startup.pcapng  core-update-images.pcapng  (+12 more)
tests/: test_ambit.py
tools/: bin_to_ihx.py  convert_simulator_bin.sh  display_assets.sh  extract_reference_assets.sh  publish.sh
(+60 files in other folders)
